# PCB

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: config.yaml  train_config.yaml
notebooks/: aug_test.ipynb  quantization.ipynb  yolo_v11_l.ipynb  yolo_v11_m.ipynb  yolo_v11_m_Finetune.ipynb  yolo_v11_s.ipynb  yolo_v11s.ipynb  yolo_v8.ipynb  yolo_v8_s.ipynb  yolo_v8s.ipynb  yolov11l.ipynb
scripts/: download_kaggle.py  run_augmentor.sh
src/: app.py
src/app/: app.py  streamlit_app.py
src/data/: augmentation.py
src/evaluation/: __init__.py  evaluate.py  metrics.py
src/inference/: __init__.py  predict.py  quantization.py
src/models/: model.py  model_factory.py
src/training/: train.py
src/utils/: config.py  set_matplotlib_hangul.py  utils.py  wandb.py  wandb_setup.py
